# api_boilerplate

./: .envrc  .gitignore  Makefile  README.md  main.py  pyproject.toml  run.sh
.bp/: initialize_bp.sh
.devcontainer/: Dockerfile.app  devcontainer.json  docker-compose.yml
.docker/: Dockerfile.app  docker-compose.dev.yml  docker-compose.prod.yml
.docker/web/conf.d/: app.conf
script/: create_rdb_tables.py  drop_db_tables.py  generate_openapi.py
src/: app.py
src/api/: context.py
src/api/utils/exception/: converter.py  error_message.py  exception.py  handler.py  middleware.py  schema.py
src/api/utils/header/: authorization.py
src/api/utils/logging/: log.py  route_class.py
src/api/v1/: route.py
src/api/v1/endpoints/: user.py
src/api/v1/schema/: request.py  response.py
src/model/impl/entity/user/: repository.py  user.py
src/model/impl/entity/user/valueobject/: age.py  name.py
src/model/impl/repository/: mysql_repository.py
src/model/impl/valueobject/: phone_number.py
src/model/impl/valueobject/id/: char_16_id.py
src/model/interface/: entity.py  repository.py  valueobject.py
src/rdb/interface/: orm.py  query.py
src/rdb/orm/: user.py
src/rdb/query/: user.py
src/settings/: __init__.py  dev.py  pord.py
src/utils/exception/: error_info.py  error_message.py  exception.py
src/utils/validation/: evaluator.py  validator.py
tests/model/interface/: test_entity.py  test_valueobject.py
tests/utils/exception/: test_exception.py
tests/utils/validation/: test_evaluator.py  test_validator.py
