[tool.poetry]
name = "bp_api"
version = "0.1.0"
description = "boiler plate for backend api of python"
authors = ["onigiri.w2"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
PyYAML = "^6.0"
types-PyYAML = "^6.0.12"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.9"}
uvicorn = "^0.21.1"
pymysql = "^1.0.3"
cryptography = "^40.0.2"
firebase-admin = "^6.1.0"

[tool.poetry.dev-dependencies]
mypy = "^1.2.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.3.0"
pytest-describe = "^2.1.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
